Using QMatrix4x4 directly in the plugin. This makes it less portable. This makes it lass portable, and I would still like to use float[4][4] or just a pointer for getting matrices across the plugin boundaries. But for now this should be fine. And it lets us have some extra flexibility. For future, I think a float* would be ideal. And then we should probably settle on column-major orfer (OpenGL), and just exchange values like that. Or in a struct. Then on the plugin side, the user will be free to chose their math library (glm for example, also column major).
But it is what it is for now, and being a little more Qt specific should
not be an issue if it's just the matrix.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,15 +3,18 @@ cmake_minimum_required(VERSION 3.2)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_FLAGS "-std=c++11 -Ofast -march=native")
 
+find_package(Qt5 COMPONENTS Core Gui)
+
 add_library(my_plugin SHARED ./src/plugin.cpp)
 target_include_directories(my_plugin PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_link_libraries(my_plugin Qt5::Core Qt5::Gui)
 
 add_library(ivrdevice_implementation SHARED ./src/VRPluginInfo.cpp)
-target_link_libraries(ivrdevice_implementation ${CMAKE_DL_LIBS})
+target_link_libraries(ivrdevice_implementation ${CMAKE_DL_LIBS} Qt5::Core Qt5::Gui)
 target_include_directories(ivrdevice_implementation PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 #add_executable(main ./src/main.cpp)
 #target_link_libraries(main my_plugin)
 
 add_executable(naim ./src/main2.cpp)
-target_link_libraries(naim ivrdevice_implementation ${CMAKE_DL_LIBS})
+target_link_libraries(naim ivrdevice_implementation ${CMAKE_DL_LIBS} Qt5::Core Qt5::Gui)
