this should be usable now with Qt's plugin arch. Now need port the code in Qt3D.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,19 +7,7 @@ set(CMAKE_CXX_FLAGS "-std=c++11 -Ofast -march=native")
 
 find_package(Qt5 COMPONENTS Core Gui)
 
-add_library(ivrdevice_implementation SHARED ./src/VRPluginInfo.cpp)
-target_link_libraries(ivrdevice_implementation ${CMAKE_DL_LIBS} Qt5::Core Qt5::Gui)
-target_include_directories(ivrdevice_implementation PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
-
-add_library(my_plugin SHARED ./examples/example_plugin.cpp)
-target_include_directories(my_plugin PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
-target_link_libraries(my_plugin Qt5::Core Qt5::Gui)
-
-add_executable(naim ./examples/main2.cpp)
-target_link_libraries(naim ivrdevice_implementation ${CMAKE_DL_LIBS} Qt5::Core Qt5::Gui)
-
-
-#qt plugin
+# simple test example
 add_library(q_plugin SHARED examples/q_plugin.cpp)
 target_include_directories(q_plugin PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_link_libraries(q_plugin Qt5::Core)
@@ -28,3 +16,11 @@ add_executable(main ./examples/main.cpp)
 target_include_directories(main PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_link_libraries(main Qt5::Core Qt5::Gui)
 
+# interface test
+add_library(qt_vrdevice_test SHARED examples/qt_example_plugin.cpp)
+target_include_directories(qt_vrdevice_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_link_libraries(qt_vrdevice_test Qt5::Core Qt5::Gui) #gui just for qmatrix
+
+add_executable(naim ./examples/main3.cpp)
+target_include_directories(naim PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_link_libraries(naim Qt5::Core Qt5::Gui)
